# milk

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md
src/: clean.rs  cli.rs  cmd.rs  commit.rs  diff.rs  head.rs  ignore.rs  init.rs  lib.rs  ls.rs  main.rs  me.rs  restore.rs  show.rs  stage.rs  status.rs  tag.rs  unstage.rs  where.rs
src/branch/: ls.rs  mv.rs  new.rs  rename.rs  rm.rs
src/cmd/: branch-rename.rs  branch.rs  head.rs  ls.rs  me.rs  status.rs  tag.rs  where.rs
