[package]
name = "milk"
version = "0.1.0"
authors = ["John Weachock <jweachock@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
colored = "1.7"
env_logger = "0.6.0"
exitcode = "1.1.2"
exitfailure = "0.5.1"
failure = "0.1.5"
git2 = "0.7"
log = "0.4.6"
structopt = "0.2.14"

[[bin]]
name = "milk"
path = "src/main.rs"

[[bin]]
name = "milk-init"
path = "src/cmd/init.rs"

[[bin]]
name = "milk-status"
path = "src/cmd/status.rs"
