[package]
name = "milk"
version = "0.1.0"
authors = ["John Weachock <jweachock@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.32.0"
colored = "1.7"
env_logger = "0.6.0"
exitcode = "1.1.2"
exitfailure = "0.5.1"
failure = "0.1.5"
git2 = "0.7"
log = "0.4.6"
structopt = "0.2.14"

[[bin]]
name = "milk"
path = "src/main.rs"

[[bin]]
name = "milk-init"
path = "src/init.rs"

[[bin]]
name = "milk-status"
path = "src/status.rs"

[[bin]]
name = "milk-head"
path = "src/head.rs"

[[bin]]
name = "milk-ls"
path = "src/ls.rs"

[[bin]]
name = "milk-tag"
path = "src/tag.rs"

[[bin]]
name = "milk-me"
path = "src/me.rs"

[[bin]]
name = "milk-where"
path = "src/where.rs"

[[bin]]
name = "milk-show"
path = "src/show.rs"

[[bin]]
name = "milk-branch"
path = "src/branch/main.rs"

[[bin]]
name = "milk-branch-ls"
path = "src/branch/ls.rs"

[[bin]]
name = "milk-branch-rename"
path = "src/branch/rename.rs"

[[bin]]
name = "milk-branch-rm"
path = "src/branch/rm.rs"
